--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,73 @@
-h1 {
-    font-family: "Georgia", Times, "Times New Roman", serif;
+body {
+    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+    background-image: url("../../images/escheresque.png");
+    line-height: 20px;
+    color: #777777;
+    margin: 0;
+   
 }
 
-p {
-    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+h1 {
+    font-family: "Georgia", Times, "Times New Roman", serif;
+
+}
+
+img {
+    float: left;
+    margin-bottom: 15px;
+    margin-right: 10px;
+}
+
+a { color: #777777;
+
 }
 
 footer {
-    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
     background-color: #666666;
+    color: #eee;
+    border-top: solid 4px #4aaaa5;
+    text-align: center;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 header {
     background-color: #ffffff;
-    border: #cccccc;
+    border-bottom: 1px solid #777777;
+    position: relative;
+    padding: 0;
+    width: 100%;
 
+   
 }
 
 #content {
     background-color: #ffffff;
-    border: #dddddd
+    border: #dddddd;
+    padding: 20px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    position: relative;
+    top: 50px;
+    margin: 0 auto;
+    width: 50%;
+
+}
+
+
+  #name {
+    color: #eee;
+    background: #4aaaa5;
+    padding: 20px;
+    width: 200px;
+  }
+
+#navigation {
+    position: absolute;
+    bottom: 50px;
+    left: 80%;
+   
 }
