--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,35 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
     background-image: url("../../images/escheresque.png");
-    line-height: 20px;
+    line-height: 30px;
     color: #777777;
     margin: 0;
    
 }
 
+p {
+    margin: 0 0 10px;
+}
+
 h1 {
     font-family: "Georgia", Times, "Times New Roman", serif;
-
+    font-size: 28px;
 }
 
 img {
     float: left;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     margin-right: 10px;
+    margin-top: 10px;
 }
 
-a { color: #777777;
+a { 
+    color: #777777;
+    text-decoration: none;
 
 }
 
@@ -27,20 +38,26 @@ footer {
     color: #eee;
     border-top: solid 4px #4aaaa5;
     text-align: center;
-    position: absolute;
+    position: fixed;
     right: 0;
     bottom: 0;
     left: 0;
 }
 
+.container {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both; 
+}
+
 header {
     background-color: #ffffff;
-    border-bottom: 1px solid #777777;
+    border-bottom: 1px solid #cccccc;
     position: relative;
-    padding: 0;
+    margin: 0 0 30px;
     width: 100%;
-
-   
+    height: 100px;
 }
 
 #content {
@@ -49,25 +66,121 @@ header {
     padding: 20px;
     border-style: solid;
     border-width: 1px;
-    border-color: black;
+    border-color: #dddddd;
     position: relative;
     top: 50px;
     margin: 0 auto;
-    width: 50%;
-
+    width: 100%;
+    max-width: 960px;
+    min-width: 960px;
 }
 
 
-  #name {
-    color: #eee;
+#name {
+    width: 250px;
+    height: 100px;
     background: #4aaaa5;
-    padding: 20px;
-    width: 200px;
-  }
+    float: left;
+    font-family: "Georgia", Times, "Times New Roman", serif;
+    text-align: center;
+    line-height: 80px;
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+}
 
-#navigation {
+nav {
+    float: right;
+    line-height: 80px;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+}
+
+#navbar {
+    padding: 10px;
+    display: inline-block;
+    border-left: 1px solid #efefef;
+    line-height: 12px;
+    }
+
+.work {
+    width: 300px;
+    overflow: auto;
+    position: relative;
+    float: left;
+    padding: 0;
+    clear: both;
+    color: #fff;
+}
+
+.work h3 {
+    border-bottom: 0;
+    background: #4aaaa5;
+    text-align: center;
     position: absolute;
-    bottom: 50px;
-    left: 80%;
-   
+    bottom: 20px;
+    padding: 15px;
+    width: 100%;
+    overflow: auto;
+}
+
+.reframe {
+   width: 300px;
+   height: 300px;
+}
+
+#title {
+    color: #4aaaa5;
+    font-weight: bold;
+    border-bottom: 1px solid #777777;
+    padding-bottom: 10px;
+    
+}
+
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+form {
+    margin: 10px;
+    margin-bottom: 30px;
+}
+
+input {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+
+#nameform {
+    width: 100%;
+    height: 40px;
+}
+
+#email {
+    width: 100%;
+    height: 40px;
+}
+
+#message {
+    width: 100%;
+    height: 400px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+
+#submit {
+    background-color: #4aaaa5;
+    padding: 10px 20px;
+    color: #eee;
 }
