--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ header {
 #content {
     background-color: #ffffff;
     border: #dddddd;
-    padding: 20px;
+    padding: 30px;
     border-style: solid;
     border-width: 1px;
     border-color: #dddddd;
@@ -75,7 +75,9 @@ header {
     min-width: 960px;
 }
 
-
+#link {
+    color: #fff;
+}
 #name {
     width: 250px;
     height: 100px;
@@ -88,6 +90,7 @@ header {
     font-weight: bold;
     text-decoration: none;
 }
+
 
 nav {
     float: right;
@@ -111,7 +114,7 @@ ul {
     overflow: auto;
     position: relative;
     float: left;
-    padding: 0;
+    padding: 10px;
     clear: both;
     color: #fff;
 }
